--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,6 @@ p{
 
     /* Heading */
 
-header{
-}
-
 .head-top{
     display: flex;
     height: 60px;
@@ -118,8 +115,7 @@ header{
 .logo-and-name{
     display: flex;
     width: auto;
-    height: 100%;
-
+    align-content: center;
 }
 
 .logo-head svg{
@@ -137,7 +133,6 @@ header{
     display: flex;
     
 }
-
 
 .web-name h1{
     font-size: 1.4em;
@@ -224,10 +219,6 @@ header{
 }
 
 
-.sub-open-line{
-    
-}
-
 .sub-open-line p{
     text-align: center;
     font-size: 1.5em;
@@ -242,9 +233,6 @@ header{
 }
 
 
-.text-open-line-h2{
-
-}
 
 .open-line-buttons{
     display: flex;
@@ -275,10 +263,6 @@ header{
     align-items: center;
     font-size: 1em;
     color: black;
-}
-
-.explore-button-1-1, .sign-up-button-1-1{
-    
 }
 
 
@@ -364,9 +348,6 @@ header{
 
 }
 
-.third-container p{
-
-}
 
 
         /* cards set 1 - basic languages */
@@ -451,9 +432,6 @@ header{
 
 }
 
-.card-third-cont1-1-1 div{
-
-}
 
 .card-third-cont1-1-1 div a{
     margin: auto;
@@ -632,9 +610,6 @@ footer{
     height: 85%;
 }
 
-.footer-text-h4-p p{
-
-}
 
 .footer-explore-sign-buttons{
     width: auto;
@@ -674,10 +649,6 @@ footer{
 
 }
 
-
-.explore-button{
-}
-
 .sign-up-button-2{
     background-color: var(--green-get-start);
     justify-content: center;
@@ -685,9 +656,6 @@ footer{
     border-radius: .7em;
 }
 
-.sign-up-button{
-
-}
 
 .footer-buttons span{
     font-family: var(--font-Days-one);
@@ -860,9 +828,6 @@ footer{
     margin: 1em 5em 2em 5em;
 }
 
-.select-language{
-
-}
 
 .cards-button-container-2{
     display: flex;
@@ -1115,10 +1080,6 @@ footer{
 
 /* learn html */
 
-.container-learn{
-    
-}
-
 .container-learn h4{
     text-align: center;
     font-size: 1.5em;
@@ -1209,9 +1170,6 @@ footer{
     margin: 2em 5em 2em 5em;
 }
 
-.select-language-learn{
-
-}
 
 .cards-button-container-2-learn{
     display: flex;
@@ -2203,9 +2161,6 @@ input:focus~label, input:valid~label{
     border-left: 5px solid #2d2d2d;
 }
 
-.text-highlight{
-
-}
 
 .yellow-note{
     background-color: rgba(255, 255, 0, 0.334);
@@ -2216,10 +2171,6 @@ input:focus~label, input:valid~label{
 }
 
 
-
-.text-highlight-hover{
-
-}
 
 .container-learn p span{
     background-color: var(--purple-six);
@@ -2268,11 +2219,20 @@ a[title]:hover::after {
         background-color: var(--purple-six);
         border-radius: 10px;
         border: 2px solid  var(--purple-third);
-        margin-top: 2.7em;
+        position: absolute;
+        margin-top: 11.7em;
+        transition: 1s;
     }
 
-    .navbar:hover .collapse{
+    .navbar:active .collapse{
         display: block;
+        height: auto;
+
+    }
+
+    .collapse:hover{
+        display: block;
+
     }
 
     .navbar{
@@ -2465,7 +2425,7 @@ a[title]:hover::after {
 
 [data-tooltip] {
     position: relative;
-    pointer: cursor;
+    
     }
     [data-tooltip]::before,
     [data-tooltip]::after {
@@ -2584,4 +2544,4 @@ a[title]:hover::after {
     animation: tooltip-horz .5s ease-out forwards;
     }
 
-    
+
