--- a/css/style.css
+++ b/css/style.css
@@ -1526,7 +1526,7 @@ section {
 
 .form-box {
     position: relative;
-    width: auto;
+    width: 450px;
     height: auto;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, 0.5);
